# scary-baboon-mod

./: CMakeLists.txt  MenuController.cpp  MenuController.hpp  README.md  build.yml  qpm.json  trigger.txt
.github/workflows/: build.yml
src/: main.cpp  main.hpp
src/menu/: MenuController.cpp  MenuController.hpp
